modal overflow fix

--- a/src/components/Utility/Modal/Modal.module.css
+++ b/src/components/Utility/Modal/Modal.module.css
@@ -9,7 +9,7 @@
     box-shadow: 1px 1px 1px black;
     padding: 16px;
     left: 15%;
-    top: 30%;
+    top: 15%;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
 }
@@ -18,5 +18,6 @@
     .Modal {
         width: 500px;
         left: calc(50% - 250px);
+        top: 30%;
     }
 }
